Tests/project2/errors/emptyfun.flm
/* This tests for an empty function body */

fun foo()
    begin
    end


        
